Crash in [@ java.lang.NullPointerException: at org.mozilla.gecko.media.GeckoHLSResourceWrapper$Callbacks.onLoad(Native Method)]
Categories
(Core :: Audio/Video, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox87 | --- | wontfix |
| firefox88 | --- | wontfix |
| firefox89 | --- | wontfix |
| firefox90 | --- | fixed |
People
(Reporter: RyanVM, Assigned: jhlin)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1689368 +++
We were able to fix a known source of crashes under this signature previously in bug 1689368 (see QA verification in comment 10), but we're still seeing a number of crashes with this signature happening in newer releases. Any ideas, John?
Crash report: https://crash-stats.mozilla.org/report/index/3a76c1d8-d951-4a56-bc56-95b470210420
Java stack trace:
java.lang.NullPointerException: NullHandle
at org.mozilla.gecko.media.GeckoHLSResourceWrapper$Callbacks.onLoad(Native Method)
at org.mozilla.gecko.media.GeckoHlsPlayer$SourceEventListener.onLoadStarted(GeckoHlsPlayer.java:4)
at org.mozilla.thirdparty.com.google.android.exoplayer2.source.MediaSourceEventListener$EventDispatcher.lambda$loadStarted$2$MediaSourceEventListener$EventDispatcher(MediaSourceEventListener.java:1)
at org.mozilla.thirdparty.com.google.android.exoplayer2.source.-$$Lambda$MediaSourceEventListener$EventDispatcher$a5_BIn2eObPe9e9fkCFXKfJPwq4.run(Unknown Source:8)
at android.os.Handler.handleCallback(Handler.java:938)
at android.os.Handler.dispatchMessage(Handler.java:99)
at android.os.Looper.loop(Looper.java:223)
at android.os.HandlerThread.run(HandlerThread.java:67)
| Assignee | ||
Comment 1•5 years ago
|
||
I still cannot reproduce it locally. :(
It looks like there are also some instances of nightly build crashes. Currently, the NPE message shows only function name (NullHandle) w/o the Java/native class where the exception is from. I'll change it to show function signature and land it on central to help identify the NPE source.
| Assignee | ||
Comment 2•5 years ago
|
||
The NullPointerException detail message generated by CheckNativeHandle()
only says "NullHandle" because for function template, the __func__ string
doesn't include the name of type parameter. Use function signature that includes
the name of parameter instead to help identify the source of exception.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Comment 5•5 years ago
|
||
After landing bug 1715947, this NPE won't occur according to crash data.
Comment 6•4 years ago
|
||
The leave-open keyword is there and there is no activity for 6 months.
:jhlin, maybe it's time to close this bug?
| Assignee | ||
Comment 7•4 years ago
|
||
(In reply to Release mgmt bot [:sylvestre / :calixte / :marco for bugbug] from comment #6)
The leave-open keyword is there and there is no activity for 6 months.
:jhlin, maybe it's time to close this bug?
Agree. Closing this bug.
Updated•4 years ago
|
| Reporter | ||
Updated•4 years ago
|
Description
•