Bug 1706380 - p1: show native class type in NPE. r=geckoview-reviewers,agi

The `NullPointerException` detail message generated by `CheckNativeHandle()`
only says "NullHandle" because for function template, the `__func__` string
doesn't include the name of type parameter. Use function signature that includes
the name of parameter instead to help identify the source of exception.

Differential Revision: https://phabricator.services.mozilla.com/D113021